--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.cdnfonts.com/css/voga');
+@import "./colors.scss";
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+body {
+  font-family: Consolas, monaco, monospace;
+  background: $elegant-blue;
+}
